objects/RoundRobin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>API name of the field that&apos;s being used</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the field that&apos;s being used</inlineHelpText>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexOfLastUsed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndexOfLastUsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>API name of the object for this assignment</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API name of the object for this assignment</inlineHelpText>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RoundRobin</label>
</CustomObject>